Updated licensing, readme and html/css.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="utf-8" />
     <title>Codename: Red Princess</title>
-   <link rel="stylesheet" type="text/css" href="style.css">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="phaser.min.js"></script>
+    <script type="text/javascript" src="input.js"></script>
+    <script type="text/javascript" src="preload.js"></script>
+    <script type="text/javascript" src="init.js"></script>
+    <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <h1>Codename: Red Princess</h1>
     <div id="gameDiv"></div>
     <p>Controls:
     <br>Move left/right: A/D
     <br>Jump: Spacebar
     <br>Run: Shift
     </p>
+    <p><a href="https://github.com/Jeasonfire/Red-Princess.git" target="_blank">For licensing info, source, art or just general info, click here!</a></p>
+    <h4>NOTE: This game is in heavy development and the version you see doesn't represent the final product in any way.</h4>
 </body>
 </html>
