--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="input.js"></script>
     <script type="text/javascript" src="preload.js"></script>
     <script type="text/javascript" src="init.js"></script>
+    <script type="text/javascript" src="actions.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </head>
