--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <title>Codename: Red Princess</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" src="phaser.min.js"></script>
-    <script type="text/javascript" src="input.js"></script>
-    <script type="text/javascript" src="preload.js"></script>
-    <script type="text/javascript" src="init.js"></script>
-    <script type="text/javascript" src="actions.js"></script>
-    <script type="text/javascript" src="game.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/phaser.min.js"></script>
+    <script type="text/javascript" src="js/input.js"></script>
+    <script type="text/javascript" src="js/preload.js"></script>
+    <script type="text/javascript" src="js/init.js"></script>
+    <script type="text/javascript" src="js/actions.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
     <div id="gameDiv"></div>
