Rewrite started. Third time's the charm!

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="utf-8" />
     <title>Codename: Red Princess</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" src="js/phaser.min.js"></script>
-    <script type="text/javascript" src="js/input.js"></script>
-    <script type="text/javascript" src="js/preload.js"></script>
-    <script type="text/javascript" src="js/init.js"></script>
-    <script type="text/javascript" src="js/actions.js"></script>
-    <script type="text/javascript" src="js/player.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    
+    <script type="application/javascript" src="lib/phaser.min.js"></script>
+    <script type="application/javascript" src="src/Main.js"></script>
+
+    <script type="application/javascript" src="src/Boot.js"></script>
+    <script type="application/javascript" src="src/Load.js"></script>
+    <script type="application/javascript" src="src/MainMenu.js"></script>
+    <script type="application/javascript" src="src/Game.js"></script>
+
+    <script type="application/javascript" src="src/Player.js"></script>
+    <script type="application/javascript" src="src/Map.js"></script>
 </head>
 <body>
+	<br>
     <div id="gameDiv"></div>
     <p>Controls:
     <br>Move left/right: A/D
