--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     
     <script type="application/javascript" src="lib/phaser.min.js"></script>
+    
     <script type="application/javascript" src="src/Player.js"></script>
     <script type="application/javascript" src="src/Map.js"></script>
 
@@ -24,7 +25,7 @@
     <br>Jump: Spacebar
     <br>Run: Shift
     </p>
-    <p><a href="https://github.com/Jeasonfire/Red-Princess.git" target="_blank">For licensing info, source, art or just general info, click here!</a></p>
+    <p><a href="https://github.com/Jeasonfire/Red-Princess" target="_blank">For licensing info, source, art or just general info, click here!</a></p>
     <h4>NOTE: This game is in heavy development and the version you see doesn't represent the final product in any way.</h4>
 </body>
 </html>
