Added player sprites.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>Codename: Red Princess</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    
+
     <script type="application/javascript" src="lib/phaser.min.js"></script>
-    
+
     <script type="application/javascript" src="src/Player.js"></script>
-    <script type="application/javascript" src="src/Map.js"></script>
+    <script type="application/javascript" src="src/Level.js"></script>
 
     <script type="application/javascript" src="src/Game.js"></script>
     <script type="application/javascript" src="src/MainMenu.js"></script>
@@ -26,6 +26,7 @@
     <br>Run: Shift
     </p>
     <p><a href="https://github.com/Jeasonfire/Red-Princess" target="_blank">For licensing info, source, art or just general info, click here!</a></p>
+    <p><a href="https://twitter.com/Jeasonfire" target="_blank">Dev's Twitter!</a></p>
     <h4>NOTE: This game is in heavy development and the version you see doesn't represent the final product in any way.</h4>
 </body>
 </html>
