--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <script type="application/javascript" src="lib/phaser.min.js"></script>
 
+    <script type="application/javascript" src="src/Input.js"></script>
+
     <script type="application/javascript" src="src/Player.js"></script>
     <script type="application/javascript" src="src/Level.js"></script>
 
