Added fireballs. Only stationary firing for now.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <script type="application/javascript" src="src/Input.js"></script>
 
+    <script type="application/javascript" src="src/Missile.js"></script>
     <script type="application/javascript" src="src/Player.js"></script>
     <script type="application/javascript" src="src/Level.js"></script>
 
