--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="application/javascript" src="lib/phaser.min.js"></script>
 
     <script type="application/javascript" src="src/Input.js"></script>
+    <script type="application/javascript" src="src/Audio.js"></script>
 
     <script type="application/javascript" src="src/Missile.js"></script>
     <script type="application/javascript" src="src/Player.js"></script>
