--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script type="application/javascript" src="src/Player.js"></script>
     <script type="application/javascript" src="src/Level.js"></script>
 
+    <script type="application/javascript" src="src/HUD.js"></script>
+
     <script type="application/javascript" src="src/Game.js"></script>
     <script type="application/javascript" src="src/MainMenu.js"></script>
     <script type="application/javascript" src="src/Load.js"></script>
