--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="application/javascript" src="src/Audio.js"></script>
 
     <script type="application/javascript" src="src/Missile.js"></script>
+    <script type="application/javascript" src="src/Enemy.js"></script>
     <script type="application/javascript" src="src/Player.js"></script>
     <script type="application/javascript" src="src/Level.js"></script>
 
