--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script type="application/javascript" src="src/Missile.js"></script>
     <script type="application/javascript" src="src/Enemy.js"></script>
+    <script type="application/javascript" src="src/Guard.js"></script>
     <script type="application/javascript" src="src/Player.js"></script>
     <script type="application/javascript" src="src/Level.js"></script>
 
