--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <script type="application/javascript" src="lib/phaser.min.js"></script>
 
+    <script type="application/javascript">
+        var WIDTH = 960;
+        var HEIGHT = 540;
+    </script>
+
     <script type="application/javascript" src="src/Input.js"></script>
     <script type="application/javascript" src="src/Audio.js"></script>
 
