--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
 </head>
 <body>
     <div id="gameDiv"></div>
+    <p>This is an unfinished product, probably never to be finished. <a href="https://github.com/Jeasonfire/Red-Princess" target="_blank">See repository for more info.</a></p>
 </body>
 </html>
